Update german translation

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -175,6 +175,8 @@ ContentDataFilter.unknownCharsetTitle=Unbekannter Zeichensatz!
 ContentDataFilter.warningUnknownCharsetTitle=Warnung: Unbekannter Zeichensatz (${charset})
 ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF-Dokument - SEHR GEFÄHRLICH!
 ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF-Dokument - SEHR GEFÄHRLICH!
+ContentFilter.imageBMPReadAdvice=BMP Bild - wahrscheinlich nicht gefährlich
+ContentFilter.imageBMPWriteAdvice=BMP Bild - wahrscheinlich nicht gefährlich
 ContentFilter.imageGifReadAdvice=GIF-Bild - wahrscheinlich nicht gefährlich
 ContentFilter.imageGifWriteAdvice=GIF-Bild - wahrscheinlich nicht gefährlich, aber Sie sollten alle Kommentare löschen
 ContentFilter.imageIcoReadAdvice=Icon(=Symbol)-Datei - wahrscheinlich nicht gefährlich
@@ -955,6 +957,9 @@ NodeUpdateManager.updateCatastropheTitle=Katastrophaler Fehler bei der Aktualisi
 NodeUpdateManager.updateFailed=Aktualisierung fehlgeschlagen: ${reason}
 NodeUpdateManager.updateFailedShort=Aktualisierung fehlgeschlagen: ${reason}
 NodeUpdateManager.updateFailedTitle=Aktualisierung fehlgeschlagen!
+NodeUpdateManager.updateInstallers=Aktuellstes Installationsprogramm über Freenet herunterladen?
+NodeUpdateManager.updateSeednodes=Seednodes automatisch aktualisieren?
+NodeUpdateManager.updateSeednodesLong=seednodes.fref Datei automatisch über Freenet aktualisieren?
 NodeUpdateManager.updateURI=Wo soll der Knoten nach Aktualisierungen suchen?
 NodeUpdateManager.updateURILong=Wo soll der Knoten nach Aktualisierungen suchen?
 NotEnoughNiceLevelsUserAlert.content=Ihr Knoten hat festgestellt, dass er auf einem hohen Nice-Level läuft. Die Performance ist geringer, wenn nicht genügend Nice-Level verfügbar sind. Bitte verringern sie den Nice-Level des Knotens (Suchen Sie nach PRIORITY in der Datei run.sh und senken Sie den Wert)! Aktuell hat ihr Knoten ${available} Level zur Verfügung, während er ${required} Level benötigt.
@@ -1014,6 +1019,9 @@ PluginConfig.configFile=Plugin-Konfigurations-Datei
 PluginConfig.configFileLong=Pfad/Dateiname der Datei in welcher die Einstellungen der Plugins (Erweiterungen) gespeichert werden.
 PluginConfig.installDir=Plugin-Installations-Verzeichnis
 PluginConfig.installDirLong=Verzeichnis in dem die Plugins (Erweiterungen) installiert werden.
+PluginJarUpdater.pluginUpdatedShortText=Eine neue Version des ${name} Plugins ist verfügbar!
+PluginJarUpdater.pluginUpdatedTitle=Eine neue Version des ${name} Plugins ist verfügbar!
+PluginJarUpdater.updatePlugin=Aktualisiere Plugin nach den abschließenden Sicherheitsüberprüfungen
 PluginManager.cannotSetOnceLoaded=Kann die Plugin(=Erweiterungs)-Liste nicht modifizieren sobald sie geladen wurde
 PluginManager.deleteFailedPluginButton=Beim nächsten Start nicht wieder versuchen
 PluginManager.loadedOnStartup=Plugins die beim Start geladen werden
@@ -1021,6 +1029,7 @@ PluginManager.loadedOnStartupLong=Klassenpfad, Name und Verzeichnis für Plugins
 PluginManager.loadedPlugins=Plugins die beim Start geladen werden
 PluginManager.loadedPluginsLong=Eine Liste von Plugins (Erweiterungen) die gestartet werden wenn der Knoten startet
 PluginManager.officialPluginLoadFailedTryAgain=Neuste Version von den Freenet-Servern herunterladen (NICHT ANONYM!)
+PluginManager.officialPluginLoadFailedTryAgainFreenet=Lade das Plugin aus dem Freenet
 PluginManager.pluginLoadingFailed=Das Plugin (Erweiterung) ${name} konnte nicht geladen werden.
 PluginManager.pluginLoadingFailedShort=Das Plugin ${name} konnte nicht geladen werden!
 PluginManager.pluginLoadingFailedTitle=Plugin konnte nicht geladen werden!
@@ -1065,9 +1074,11 @@ PproxyToadlet.loadPluginLabel=Plugin laden:
 PproxyToadlet.noPlugins=Keine Plugins geladen
 PproxyToadlet.noVersion=k.A.
 PproxyToadlet.pluginDirectoryNotCreated=Das Plugin-Verzeichnis konnte nicht erstellt werden.
+PproxyToadlet.pluginFilename=Name
 PproxyToadlet.pluginNotDownloaded=Das Plugin konnte nicht heruntergeladen werden.
 PproxyToadlet.pluginNotFoundReload=Das angegebene Plugin konnte nicht gefunden werden um es neu zu laden.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin nicht gefunden (neu laden)
+PproxyToadlet.pluginSourceFreenet=Lade aus dem Freenet. Dies ist nicht verfolgbar, sicher und könnte langsam sein.
 PproxyToadlet.pluginStopping=Plugin wird gestoppt
 PproxyToadlet.pluginUnloaded=Plugin entfernt
 PproxyToadlet.pluginUnloadedWithName=Das Plugin ${name} wurde entfernt.
@@ -1167,8 +1178,6 @@ QueueToadlet.insertFileLabel=Lokale Datei über den Browser hochladen (LANGSAM)
 QueueToadlet.insertFileResetForm=Formular zurücksetzen
 QueueToadlet.key=Schlüssel
 QueueToadlet.lastActivity=Letzte Aktivität
-QueueToadlet.lastActivity.unknown=unbekannt
-QueueToadlet.lastActivity.ago=vor ${time}
 QueueToadlet.legend=Legende
 QueueToadlet.mimeType=MIME-Typ
 QueueToadlet.noTaskOnGlobalQueue=Im Moment ist keine Aufgabe in der globalen Warteschlange.
@@ -1231,6 +1240,8 @@ QueueToadlet.warningUnsafeContentExplanation=Die Datei, die Sie herunterladen wo
 QueueToadlet.wipD=In Arbeit: Downloads (${size})
 QueueToadlet.wipDU=In Arbeit: Verzeichnis-Uploads (${size})
 QueueToadlet.wipU=In Arbeit: Uploads (${size})
+QueueToadlet.lastActivity.ago=vor ${time}
+QueueToadlet.lastActivity.unknown=unbekannt
 RequestStarterGroup.scheduler=Prioritäts-Verfahren des Planers: hard (hart, streng nach der Priorität) oder soft (weich, wählt die Prioritäten ein bisschen zufällig)
 RequestStarterGroup.schedulerCHKInserts=Prioritäts-Verfahren des Planers (Einfügen von CHKs)
 RequestStarterGroup.schedulerCHKRequests=Prioritäts-Verfahren des Planers (CHK-Anfragen)
@@ -1412,18 +1423,25 @@ StartupToadlet.title=Freenet startet gerade
 StaticToadlet.pathInvalidChars=Der angegebene URI enthält nicht erlaubte Zeichen.
 StaticToadlet.pathNotFound=Der Pfad, den Sie angegeben haben, existiert nicht.
 StaticToadlet.pathNotFoundTitle=Pfad nicht gefunden
+StatisticsToadlet.PUB_KEY=Öffentlicher Schlüssel
+StatisticsToadlet.accessRate=Zugriffsrate
 StatisticsToadlet.ackOnlyBytes=Bestätigungs-Pakete: ${total}
-StatisticsToadlet.activityInserts=Einfügen: ${totalSenders} Sender insgesamt, ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
+StatisticsToadlet.activityInserts=Hochladen: ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
 StatisticsToadlet.activityRequests=Anfragen: ${totalSenders} Sender insgesamt, ${CHKhandlers} CHK handler, ${SSKhandlers} SSK handler (${local} lokal)
 StatisticsToadlet.adminBytes=Verwaltungs-Bytes: ${initial} Initialisierungs-Nachrichten, ${changedIP} IP-Änderungs-Nachrichten, ${disconn} Trennungs-Mitteilungen, ${routingStatus} Routing-Status
 StatisticsToadlet.allocMemory=Zugewiesener Java-Speicher: ${memory}
 StatisticsToadlet.amount=Anzahl
 StatisticsToadlet.announceBytes=Ausgehende Ankündigungen: ${total}
 StatisticsToadlet.authBytes=Verbindungs-Aufbau: ${total} ausgehend
+StatisticsToadlet.avgDist=Durchschnittliche Entfernung
+StatisticsToadlet.avgTime=Durchschnittliche Zeit
 StatisticsToadlet.bandwidthTitle=Bandbreite
+StatisticsToadlet.capacity=Kapazität
 StatisticsToadlet.cpus=Verfügare CPUs: ${count}
 StatisticsToadlet.databaseJobsByPriority=Datenbank Aufgaben
+StatisticsToadlet.datastore=Datenbank
 StatisticsToadlet.debuggingBytes=Bytes zur Fehlererkennung: ${netColoring} Netzwerk-Färbung, ${ping} Ping, ${probe} Probe Requests, ${routed} weitergeleitete Test-Nachrichten.
+StatisticsToadlet.distanceStats=Entfernungsstatistiken
 StatisticsToadlet.fullTitle=Statistiken für ${name}
 StatisticsToadlet.getLogs=Letzte Log-Datei des Knotens abrufen
 StatisticsToadlet.inputRate=Eingehend: ${rate}/Sekunde (von ${max})
@@ -1433,10 +1451,12 @@ StatisticsToadlet.jvmInfoTitle=JVM-Info
 StatisticsToadlet.jvmVendor=JVM-Hersteller: ${vendor}
 StatisticsToadlet.jvmVersion=JVM-Version: ${version}
 StatisticsToadlet.maxMemory=Maximaler Java-Speicher: ${memory}
+StatisticsToadlet.maxOpennetPeers=Maximale Anzahl Fremde
 StatisticsToadlet.noRequests=Ihr Knoten bearbeitet gerade keine Anfragen
 StatisticsToadlet.nodeToNodeBytes=Knoten-zu-Knoten-Nachrichten: ${total}
 StatisticsToadlet.offerReplys=Running offer replys: ${chk} CHK, ${ssk} SSK.
 StatisticsToadlet.offeredKeyOutput=Angebotene Schlüssel: gesendete Schlüssel ${total}, gesendete Angebote ${offered}
+StatisticsToadlet.opennetStats=Opennet Statistiken
 StatisticsToadlet.osArch=OS-Architektur: ${arch}
 StatisticsToadlet.osName=OS-Name: ${name}
 StatisticsToadlet.osVersion=OS-Version: ${version}
@@ -1451,6 +1471,7 @@ StatisticsToadlet.routingDisabledShort=Nicht weiterleiten
 StatisticsToadlet.running=Aktiv
 StatisticsToadlet.statisticGatheringTitle=Verschiedene Statistiken
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
+StatisticsToadlet.successRate=Erfolgsrate
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Thread-Dump generieren
 StatisticsToadlet.threads=Laufende Threads: ${running}/${max}
@@ -1458,12 +1479,14 @@ StatisticsToadlet.threadsByPriority=Threads nach Priorität
 StatisticsToadlet.totalInput=Gesamt eingehend: ${total} (${rate}/Sekunde)
 StatisticsToadlet.totalOutput=Gesamt ausgehend: ${total} (${rate}/Sekunde)
 StatisticsToadlet.totalOverhead=Gesamter non-request overhead: ${rate}/Sek. (${percent}%).
+StatisticsToadlet.totalTime=Zeit insgesamt
 StatisticsToadlet.transferringRequests=Übertrage Anfragen: sende ${senders}, empfange ${receivers}
 StatisticsToadlet.unaccountedBytes=Andere ausgehende Daten: ${total} (${percent}%)
 StatisticsToadlet.uomBytes=Updater ausgehend: ${total}
 StatisticsToadlet.usedMemory=Benutzter Java-Speicher: ${memory}
 StatisticsToadlet.versionTitle=Knoten-Versions-Informationen
 StatisticsToadlet.waiting=Wartend
+StatisticsToadlet.writeRate=Schreibrate
 StatusBar.alerts=Nachrichten:
 StatusBar.switchToAdvancedMode=Erweiterten Modus benutzen
 StatusBar.switchToSimpleMode=Einfachen Modus benutzen
@@ -1540,7 +1563,9 @@ TranslationToadlet.remove=Entfernen
 TranslationToadlet.removeOverrideTitle=Einen Übersetzungs-Korrektur-Schlüssel löschen
 TranslationToadlet.removeOverrideWarningTitle=Sie sind dabei einen Übersetzungs-Korrektur-Schlüssel zu löschen!
 TranslationToadlet.returnToTranslations=Zurück zur Übersetzungs-Seite
+TranslationToadlet.selectTranslation=Wähle Übersetzung
 TranslationToadlet.showEverything=Alles anzeigen, auch schon übersetzte Zeichenketten
+TranslationToadlet.showTranslationOf=Zeige die Übersetzung von :
 TranslationToadlet.title=Übersetzung
 TranslationToadlet.titleLong=Zur Übersetzung beitragen
 TranslationToadlet.translationKeyLabel=Übersetzungs-Schlüssel
@@ -1587,6 +1612,7 @@ UserAlertManager.feedTitle=Freenet
 UserAlertManager.minorCountLabel=Unwichtig:
 UserAlertManager.totalLabel=Gesamt:
 UserAlertManager.warningCountLabel=Warnungen:
+UserAlertsToadlet.noMessages=Keine Nachrichten
 UserAlertsToadlet.titleWithName=Warnungen für ${name}
 WelcomeToadlet.activityTitle=Derzeitige Aktivität
 WelcomeToadlet.alertsSummary=Zusammenfassung der Warnungen (klicken sie für Details oder um etwas zu ändern)
