Fix end marker for swedish translation

--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -1019,4 +1019,4 @@ WelcomeToadlet.version=Freenet ${fullVersion} Version #${build} r${rev}
 WelcomeToadlet.versionHeader=Versionsinformation & nodkontrol
 WrapperConfig.wrapper.java.maxmemory.long=Begränsa Freenets utnyttjande av minnet. Freenet kommer att behöva mer minne ju fler förfrågningar som finns i kö men också ifall du har avdelat mycket plats för datalagring . Ändringar kommer inte att ske förrän Freenet har startats om.
 WrapperConfig.wrapper.java.maxmemory.short=Maximalt minne (skrivs i megabytes)
-WelcomeToadlet.insertCount
+End
