--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -1514,6 +1514,13 @@ StartupToadlet.title=Démarrage de Freenet
 StaticToadlet.pathInvalidChars=Cette URI contient des caractères interdits.
 StaticToadlet.pathNotFound=Le chemin spécifié n'existe pas.
 StaticToadlet.pathNotFoundTitle=Chemin introuvable.
+StatisticsToadlet.CACHE=Cache
+StatisticsToadlet.CHK=CHK
+StatisticsToadlet.CLIENT=Client cache
+StatisticsToadlet.PUB_KEY=Pubkey
+StatisticsToadlet.SLASHDOT=Slashfot
+StatisticsToadlet.SSK=SSK
+StatisticsToadlet.STORE=Store
 StatisticsToadlet.accessRate=Taux d'accès
 StatisticsToadlet.ackOnlyBytes=Paquets Ack-only : ${total}
 StatisticsToadlet.activityInserts=Insertions : ${totalSenders} au total, ${CHKhandlers} CHK,  ${SSKhandlers} SSK (${local} locales)
@@ -1525,18 +1532,13 @@ StatisticsToadlet.authBytes=Connexions : ${total} envoyées
 StatisticsToadlet.avgDist=Distance moyenne
 StatisticsToadlet.avgLocation=Localisation moyenne
 StatisticsToadlet.avgSuccessLoc=Localisation moyenne des succès
+StatisticsToadlet.avgTime=Temps moyen
 StatisticsToadlet.bandwidthTitle=Bande passante
 StatisticsToadlet.capacity=Capacité
 StatisticsToadlet.chkCache=Cache (CHK)
 StatisticsToadlet.chkDetailTiming=Temps détaillés (récupérations locales de CHK)
 StatisticsToadlet.chkStore=Store (CHK)
-StatisticsToadlet.STORE=Store
-StatisticsToadlet.CACHE=Cache
-StatisticsToadlet.SLASHDOT=Slashfot
-StatisticsToadlet.CLIENT=Client cache
-StatisticsToadlet.CHK=CHK
-StatisticsToadlet.SSK=SSK
-StatisticsToadlet.PUB_KEY=Pubkey
+StatisticsToadlet.count=Compteur
 StatisticsToadlet.cpus=Processeurs disponibles : ${count}
 StatisticsToadlet.databaseJobsByPriority=Base de données (opérations)
 StatisticsToadlet.datasize=Espace utilisé
@@ -1551,6 +1553,7 @@ StatisticsToadlet.globalWindow=Fenêtre globale
 StatisticsToadlet.inputRate=Réception : ${rate}/seconde (sur ${max}/seconde)
 StatisticsToadlet.insertOutput=Traffic d'insertion (traffic utile): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.javaVersion=Version de Java : ${version}
+StatisticsToadlet.jobType=Type du travail
 StatisticsToadlet.jvmInfoTitle=Informations sur la JVM
 StatisticsToadlet.jvmVendor=Distributeur de la JVM : ${vendor}
 StatisticsToadlet.jvmVersion=Version de la JVM : ${version}
@@ -1562,6 +1565,7 @@ StatisticsToadlet.noRequests=Votre noeud ne traite aucune requète à ce moment.
 StatisticsToadlet.nodeToNodeBytes=Message inter-noeuds : ${total}
 StatisticsToadlet.offerReplys=Réponse à des demandes en cours : ${chk} CHK, ${ssk} SSK.
 StatisticsToadlet.offeredKeyOutput=Envoi de clés : clés ${total}, offres ${offered}
+StatisticsToadlet.opennetStats=Statistiques opennet
 StatisticsToadlet.osArch=Architecture de l'OS : ${arch}
 StatisticsToadlet.osName=Nom de l'OS : ${name}
 StatisticsToadlet.osVersion=Version de l'OS : ${version}
@@ -1569,6 +1573,7 @@ StatisticsToadlet.outputRate=Envoi : ${rate}/seconde (sur ${max}/seconde)
 StatisticsToadlet.payloadOutput=Envoi utile : ${total} (${rate}/seconde) (${percent}%)
 StatisticsToadlet.peerStatsTitle=Statistiques des noeuds
 StatisticsToadlet.priority=Priorité
+StatisticsToadlet.queuedCount=Compteur de la file d'attente
 StatisticsToadlet.readRequests=Requêtes de lecture
 StatisticsToadlet.realGlobalWindow=Fenêtre globale réelle
 StatisticsToadlet.requestOutput=Requètes envoyées (envoi utile): CHK ${chk} SSK ${ssk}.
@@ -1590,6 +1595,7 @@ StatisticsToadlet.totalInputSession=Total reçu (session) : ${total} (${rate}/se
 StatisticsToadlet.totalOutput=Total envoyé (global) : ${total}
 StatisticsToadlet.totalOutputSession=Total envoyé (session) : ${total} (${rate}/seconde)
 StatisticsToadlet.totalOverhead=Pas des requètes: ${rate}/s (${percent}%).
+StatisticsToadlet.totalTime=Temps total
 StatisticsToadlet.transferringRequests=Requètes transférées : envoi ${senders}, réception ${receivers}
 StatisticsToadlet.unaccountedBytes=Envoi restant : ${total} (${percent}%)
 StatisticsToadlet.uomBytes=Envoi de mises à jour : ${total}
