French translation update via Freetalk.

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -402,12 +402,14 @@ FProxyToadlet.friendsTitle=Connexions aux Amis
 FProxyToadlet.goBack=Retour
 FProxyToadlet.goBackToPrev=Revenir à la page précédente
 FProxyToadlet.help=Aide
+FProxyToadlet.imageinitializing=Initialisation
 FProxyToadlet.insertFreesite=Insérer un site anonymement sur Freenet
 FProxyToadlet.insertFreesiteTitle=Insérer un Freesite
 FProxyToadlet.invalidKeyTitle=Clé invalide
 FProxyToadlet.invalidKeyWithReason=Clé invalide : ${reason}
 FProxyToadlet.largeFile=Grand fichier
 FProxyToadlet.largeFileExplanationAndOptions=Cette clé Freenet correspond à un grand fichier. Les fichiers de cette taille ne peuvent généralement pas être envoyés directement au navigateur car ils sont trop longs à récupérer. Les options suivantes sont possibles :
+FProxyToadlet.lastRefresh=Dernier rafraîchissement il y a {0}
 FProxyToadlet.mayChange=(cela peut changer)
 FProxyToadlet.mimeType=Type MIME : ${mime}
 FProxyToadlet.notEnoughMetaStrings=Pas assez de méta-données
@@ -1490,6 +1492,8 @@ SimpleToadletServer.enableJS=Autoriser FProxy à utiliser du Javascript ?
 SimpleToadletServer.enableJSLong=FProxy doit-il utiliser le Javascript ou non. Ce paramètre devrait être sur faux dans la plupart des cas. Les freesites ne pourront pas utiliser de Javascript, même si ceci est activé.
 SimpleToadletServer.enablePersistentConnections=Activer les connexions HTTP persistantes ? (Lisez la description détaillée)
 SimpleToadletServer.enablePersistentConnectionsLong=N'activez ceci que si votre navigateur soit configuré pour utiliser beaucoup de connexions persistantes.
+SimpleToadletServer.enableWP=Permettre à FProxy d'utiliser le flux de données (expérimental)?
+SimpleToadletServer.enableWPLong=FProxy devrait utiliser Javascript pour mettre à jour les données sans recharger la page. Cela requiert que Javascript soit activé. C'est expérimental et à utiliser à vos risques et périls.
 SimpleToadletServer.enabled=Activer FProxy ?
 SimpleToadletServer.enabledLong=Activer ou non FProxy et les services HTTP
 SimpleToadletServer.hasCompletedWizard=Avez vous déjà répondu aux questions de l'assistant ?
@@ -1805,5 +1809,9 @@ WelcomeToadlet.versionHeader=Informations de version  & Contrôle du noeud
 WelcomeToadlet.writtenDatabaseStats=Les statistiques de la base de donnée ont été écrites dans le journal du wrapper
 WrapperConfig.wrapper.java.maxmemory.long=Limite de mémoire utilisée par Freenet. Plus vous ferez de requètes et aurez un grand datastore, plus Freenet aura besoin de mémoire. Les changements ne s'appliqueront qu'après un redémarrage de Freenet.
 WrapperConfig.wrapper.java.maxmemory.short=Mémoire maximum (en mégaoctets)
+fproxy.push.hide=Masquer
+fproxy.push.imageprogress=Image loading progress :
+fproxy.push.pushingCancelled=Flux de données annulé
+fproxy.push.show=Voir
 testing.test=test$(test1)test$(test2)test
 End
