Make max time between writes configurable.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -754,6 +754,8 @@ LogConfigHandler.dirName=Logging directory
 LogConfigHandler.dirNameLong=Directory into which to put log files
 LogConfigHandler.enabled=Enable logging?
 LogConfigHandler.enabledLong=Set to false to completely disable logging
+LogConfigHandler.maxBacklogNotBusy=Max time between writing logs (milliseconds)
+LogConfigHandler.maxBacklogNotBusyLong=Maximum time the node will hold logging data in RAM for if it is not working flat-out writing it to disk. Higher values mean fewer, larger disk writes and hence better system performance, but also mean if you are debugging you will see the results later.
 LogConfigHandler.maxCachedBytes=Max cached log bytes in RAM
 LogConfigHandler.maxCachedBytesLong=Maximum number of bytes of logging cached in RAM
 LogConfigHandler.maxCachedLines=Max cached log lines in RAM
