Handle exceptions thrown during filtering

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -571,6 +571,7 @@ FetchException.longError.28=Some of the data was found, but not enough to fetch 
 FetchException.longError.29=Wrong MIME Type: The key was not in the list of allowed MIME types provided by the client
 FetchException.longError.2=Don't know what to do with splitfile
 FetchException.longError.30=The request was terminated by a node because it had recently received a request for the same key and that request had failed
+FetchException.longError.31=The request completed, but the ContentFilter was unable to guarantee that the contents are safe to access
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
 FetchException.longError.5=Failure in extracting files from an archive
@@ -601,6 +602,7 @@ FetchException.shortError.28=Not enough data found
 FetchException.shortError.29=Wrong MIME type
 FetchException.shortError.2=Unknown splitfile metadata
 FetchException.shortError.30=Data not found (recently failed)
+FetchException.shortError.31=Content sanitation failed
 FetchException.shortError.3=Unknown metadata
 FetchException.shortError.4=Invalid metadata
 FetchException.shortError.5=Archive failure
