Add a checkbox to download pages to disable filter when queueing

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -465,6 +465,8 @@ FProxyToadlet.fetchLargeFileAnywayAndDisplay=Open the file in the browser. This 
 FProxyToadlet.fetchLargeFileAnywayAndDisplayButton=Display
 FProxyToadlet.fileInformationTitle=File Information
 FProxyToadlet.filenameLabel=Filename:
+FProxyToadlet.filterData=Filter data:
+FProxyToadlet.filterDataMessage=Select this to run your request through the content filter. The filter will try to prevent your computer from running anything which might harm it, or break your anonymity. Keeping this checked is strongly recommended.
 FProxyToadlet.friends=Connections to your friends' nodes
 FProxyToadlet.friendsTitle=Connections to friends
 FProxyToadlet.goBack=Go back
