--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1237,6 +1237,8 @@ QueueToadlet.failedU=Failed uploads (${size})
 QueueToadlet.fcpIsMissing=FCP server is missing
 QueueToadlet.fileName=Filename
 QueueToadlet.files=Files
+QueueToadlet.filterData=Filter:
+QueueToadlet.filterDataMessage=Select this to run your request through the content filter. The filter will try to prevent your computer from running anything which might harm it, or break your anonymity. Keeping this checked is stronglyrecommended.            
 QueueToadlet.follow=Follow Redirect
 QueueToadlet.globalQueueIsEmpty=No queued downloads/uploads on the global queue.
 QueueToadlet.identifier=Identifier
