Fix spelling mistake.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -604,7 +604,7 @@ FetchException.shortError.28=Not enough data found
 FetchException.shortError.29=Wrong MIME type
 FetchException.shortError.2=Unknown splitfile metadata
 FetchException.shortError.30=Data not found (recently failed)
-FetchException.shortError.31=Content sanitation failed
+FetchException.shortError.31=Content sanitization failed
 FetchException.shortError.3=Unknown metadata
 FetchException.shortError.4=Invalid metadata
 FetchException.shortError.5=Archive failure
