Check for unexpected EOR in the ContentFilter
Remove file size checks in the type specific filters. If there is
not enough data to read in the headers, EOF will be thrown, and
the ContentFilter will catch it, and throw the right exception to
the caller.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -28,8 +28,6 @@ BMPFilter.InvalidResolutionD=Image has negative resolution
 BMPFilter.InvalidResolutionT= Invalid resolution
 BMPFilter.InvalidStartWordD=Start word is not one of the BM,BA,CI,CP,IC and PT
 BMPFilter.InvalidStartWordT=Invalid Start word
-BMPFilter.TooShortD=Too short file
-BMPFilter.TooShortT=The file is too short to contain a bmp header
 BMPFilter.notBMP=Could not filter BMP:
 Bookmark.noName=no name
 BookmarkEditorToadlet.addBookmark=Add Bookmark
@@ -200,6 +198,8 @@ ContentDataFilter.unknownCharsetTitle=Unknown character set!
 ContentDataFilter.warningUnknownCharsetTitle=Warning: Unknown character set (${charset})
 ContentFilter.applicationPdfReadAdvice=Adobe(R) PDF document - VERY DANGEROUS!
 ContentFilter.applicationPdfWriteAdvice=Adobe(R) PDF document - VERY DANGEROUS!
+ContentFilter.EOFMessage=Unexpected end of file
+ContentFilter.EOFDescription=The filter needed more data from the file you were accessing than was available. The file may be malformed or corrupted.
 ContentFilter.imageBMPReadAdvice=BMP image - probably not dangerous
 ContentFilter.imageBMPWriteAdvice=BMP image - probably not dangerous
 ContentFilter.imageGifReadAdvice=GIF image - probably not dangerous
@@ -633,8 +633,6 @@ FNPPacketMangler.somePeersDisconnectedStillNotAckedDetail=${count} of your peers
 GIFFilter.invalidHeader=The file does not contain a valid GIF header.
 GIFFilter.invalidHeaderTitle=Invalid header
 GIFFilter.notGif=The file you tried to fetch is not a GIF. It might be some other file format, and your browser may do something dangerous with it, therefore we have blocked it.
-GIFFilter.tooShort=The file is too short to be a GIF.
-GIFFilter.tooShortTitle=Too short
 GenericReadFilterCallback.couldNotParseAbsoluteFreenetURI=Could not parse as an absolute Freenet URI
 GenericReadFilterCallback.couldNotParseFormURIWithError=Filter could not parse form URI: ${error}
 GenericReadFilterCallback.couldNotParseRelativeFreenetURI=Could not parse as a relative Freenet URI
