Disallow text before <html> (tags and comments are fine). This should eliminate any last possibility of duplicate charset detection i.e. documents which are HTML tags in UTF8 but are wierd but valid characters of text in UTF16.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -647,6 +647,7 @@ GenericReadFilterCallback.protocolNotEscaped=Not an escaped protocol: ${protocol
 HTMLFilter.couldNotParseStyle=Could not match input style
 HTMLFilter.deletedUnknownStyle=deleted unknown style
 HTMLFilter.failedToParseLabel=The HTML filter failed to parse the page
+HTMLFilter.textBeforeHTML=Invalid HTML document: Text before <html> tag. We only allow valid HTML documents and not fragments because this makes for more reliable filtering (particularly avoiding charset ambiguity).
 HTMLFilter.tooManyNestedStyleOrScriptTags=Too many nested style or script tags - ambiguous or invalid parsing
 HTMLFilter.tooManyNestedStyleOrScriptTagsLong=Too many nested </style> tags - ambiguous or invalid parsing, can't reliably filter so removing the inner tags - garbage may appear in browser
 HTMLFilter.unknownTag=unknown tag ${tag}
