Throw if a MIME type that isn't a known HTML type is specified in a meta tag.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -647,6 +647,7 @@ GenericReadFilterCallback.protocolNotEscaped=Not an escaped protocol: ${protocol
 HTMLFilter.couldNotParseStyle=Could not match input style
 HTMLFilter.deletedUnknownStyle=deleted unknown style
 HTMLFilter.failedToParseLabel=The HTML filter failed to parse the page
+HTMLFilter.invalidMetaType=Invalid MIME type in meta tag, not a known HTML format.
 HTMLFilter.metaOutsideHead=<meta> tag outside <head>. This is not allowed as it is invalid and assuming it doesn't happen speeds up charset detection.
 HTMLFilter.multipleCharsetsInMeta=Multiple <meta> charset declarations. This is confusing, invalid, unsafe and not allowed.
 HTMLFilter.textBeforeHTML=Invalid HTML document: Text before <html> tag. We only allow valid HTML documents and not fragments because this makes for more reliable filtering (particularly avoiding charset ambiguity).
