--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -576,6 +576,7 @@ FetchException.longError.30=The request was terminated by a node because it had 
 FetchException.longError.31=The ContentFilter was unable to guarantee that the contents are safe to access
 FetchException.longError.32=The ContentFilter is not familiar with the MIME type of the data and is unable to process it
 FetchException.longError.33=The ContentFilter discovered a MIME type it knows to be dangerous, as so was unable to process the request
+FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
 FetchException.longError.5=Failure in extracting files from an archive
@@ -609,6 +610,7 @@ FetchException.shortError.30=Data not found (recently failed)
 FetchException.shortError.31=Content sanitization failed
 FetchException.shortError.32=Content filter encountered unknown MIME type
 FetchException.shortError.33=Content filter encountered dangerous MIME type
+FetchException.shortError.34=Content does not match hashes in metadata
 FetchException.shortError.3=Unknown metadata
 FetchException.shortError.4=Invalid metadata
 FetchException.shortError.5=Archive failure
