Show detected compatibility mode on advanced mode queue page.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1198,6 +1198,8 @@ QueueToadlet.bulkDownloadSelectOptionDirect=to temporary space
 QueueToadlet.DUinProgress=Directory uploads in progress (${size})
 QueueToadlet.DinProgress=Downloads in progress (${size})
 QueueToadlet.UinProgress=Uploads in progress (${size})
+QueueToadlet.compatModeLabel=Compatibility mode
+QueueToadlet.compatibilityMode=Compatibility mode
 QueueToadlet.change=Change
 QueueToadlet.completedDU=Completed directory uploads (${size})
 QueueToadlet.completedDinDownloadDirectory=Completed downloads to download directory (${size})
