--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -573,9 +573,9 @@ FetchException.longError.28=Some of the data was found, but not enough to fetch 
 FetchException.longError.29=Wrong MIME Type: The key was not in the list of allowed MIME types provided by the client
 FetchException.longError.2=Don't know what to do with splitfile
 FetchException.longError.30=The request was terminated by a node because it had recently received a request for the same key and that request had failed
-FetchException.longError.31=The ContentFilter was unable to guarantee that the contents are safe to access
-FetchException.longError.32=The ContentFilter is not familiar with the MIME type of the data and is unable to process it
-FetchException.longError.33=The ContentFilter discovered a MIME type it knows to be dangerous, as so was unable to process the request
+FetchException.longError.31=The content filter was unable to guarantee that the contents are safe to access
+FetchException.longError.32=The content filter is not familiar with the MIME type of the data and is unable to process it
+FetchException.longError.33=The content filter discovered a MIME type it knows to be dangerous, as so was unable to process the request
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
