Move file upload form to a separate page on the Downloads and Uploads menu.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -344,6 +344,7 @@ DownloadFeedUserAlert.title=${from} recommends you a file
 ExtOldAgeUserAlert.extTooOld=Your freenet-ext.jar file seems to be outdated: we strongly advise you to update it using http://downloads.freenetproject.org/alpha/freenet-ext.jar.
 ExtOldAgeUserAlert.extTooOldTitle=Freenet-ext too old
 ExtOldAgeUserAlert.extTooOldShort=Your freenet-ext.jar is out of date. Please upgrade.
+FileInsertWizardToadlet.pageTitle=Upload a file to Freenet
 FirstTimeWizardToadlet.homepageTitle=Freenet first time wizard!
 FirstTimeWizardToadlet.autodetectedSuggestedLimit=Recommended:
 FirstTimeWizardToadlet.autoUpdate=Auto-update
@@ -507,6 +508,8 @@ FProxyToadlet.queue=manage queued requests
 FProxyToadlet.queueTitle=Downloads and uploads
 FProxyToadlet.uploadsTitle=Uploads
 FProxyToadlet.uploads=Files being uploaded to Freenet
+FProxyToadlet.uploadFileWizardTitle=Upload a file
+FProxyToadlet.uploadFileWizardTitle=Upload a file to Freenet
 FProxyToadlet.retryNow=Retry now
 FProxyToadlet.seclevelsTitle=Security Levels
 FProxyToadlet.seclevels=Configure the level of security provided by Freenet
