--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -344,6 +344,13 @@ DownloadFeedUserAlert.title=${from} recommends you a file
 ExtOldAgeUserAlert.extTooOld=Your freenet-ext.jar file seems to be outdated: we strongly advise you to update it using http://downloads.freenetproject.org/alpha/freenet-ext.jar.
 ExtOldAgeUserAlert.extTooOldTitle=Freenet-ext too old
 ExtOldAgeUserAlert.extTooOldShort=Your freenet-ext.jar is out of date. Please upgrade.
+FileInsertWizardToadlet.insertCanonicalTitle=Insert a canonical key
+FileInsertWizardToadlet.insertCanonical=This will always produce the same key for the same file, so is convenient for filesharing. However, if the bad guys can predict what files you are going to insert, they may be able to use this to trace you a lot more easily.
+FileInsertWizardToadlet.insertIntro=There are several different ways to upload (insert) a file to Freenet depending on whether you have uploaded the file before and what your security requirements are:
+FileInsertWizardToadlet.insertRandomTitle=Insert a random, safe key
+FileInsertWizardToadlet.insertRandom=This is much safer than the first option, but the key will be different every time you or somebody else inserts the key. Use this if you are the original source of some sensitive data.
+FileInsertWizardToadlet.insertSpecificKeyTitle=Specify a key
+FileInsertWizardToadlet.insertSpecificKey=If you know the exact key you want to insert to, please specify it here. If it is an SSK, USK or KSK, all the data under it will be encrypted randomly like with option 2.
 FileInsertWizardToadlet.pageTitle=Upload a file to Freenet
 FirstTimeWizardToadlet.homepageTitle=Freenet first time wizard!
 FirstTimeWizardToadlet.autodetectedSuggestedLimit=Recommended:
@@ -509,7 +516,7 @@ FProxyToadlet.queueTitle=Downloads and uploads
 FProxyToadlet.uploadsTitle=Uploads
 FProxyToadlet.uploads=Files being uploaded to Freenet
 FProxyToadlet.uploadFileWizardTitle=Upload a file
-FProxyToadlet.uploadFileWizardTitle=Upload a file to Freenet
+FProxyToadlet.uploadFileWizard=Upload a file to Freenet
 FProxyToadlet.retryNow=Retry now
 FProxyToadlet.seclevelsTitle=Security Levels
 FProxyToadlet.seclevels=Configure the level of security provided by Freenet
