Show overridden crypto keys detected in CompatibilityMode on the queue page compat mode cell.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1280,6 +1280,7 @@ QueueToadlet.noTaskOnGlobalQueue=There is no task queued on the global queue at 
 QueueToadlet.none=none
 QueueToadlet.notLoadedYetTitle=Queue not loaded yet
 QueueToadlet.notLoadedYet=Freenet is still loading the persistent requests queue. Please be patient.
+QueueToadlet.overriddenCryptoKeyInCompatCell=random crypto key
 QueueToadlet.panicButtonTitle=Panic button
 QueueToadlet.panicButton=Panic!
 QueueToadlet.panicButtonNoConfirmation=Click to remove all downloads/uploads and clear all incriminating data without confirmation!
