Explain significance slightly.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -588,7 +588,7 @@ FetchException.longError.31=The content filter was unable to guarantee that the 
 FetchException.longError.32=The content filter is not familiar with the MIME type of the data and is unable to process it
 FetchException.longError.33=The content filter discovered a MIME type it knows to be dangerous, as so was unable to process the request
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
-FetchException.longError.35=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the request, and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in downloads database)".
+FetchException.longError.35=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the request (which will not go away even if you defrag node.db4o), and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in downloads database)".
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
 FetchException.longError.5=Failure in extracting files from an archive
@@ -723,7 +723,7 @@ IPUndetectedUserAlert.suggestForwardTwoPorts=Also, it would be a good idea to fo
 InsertException.longError.10=Cancelled by user
 InsertException.longError.11=Meta string (most likely a '/') used in the URI
 InsertException.longError.12=Binary blob format error
-InsertException.longError.13=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the request, and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in uploads database)".
+InsertException.longError.13=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the request (which will not go away even if you defrag node.db4o), and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in uploads database)".
 InsertException.longError.1=Caller supplied a URI we cannot use"
 InsertException.longError.2=Internal bucket error: out of disk space/permissions problem?
 InsertException.longError.3=Internal error
