--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -723,7 +723,7 @@ IPUndetectedUserAlert.suggestForwardTwoPorts=Also, it would be a good idea to fo
 InsertException.longError.10=Cancelled by user
 InsertException.longError.11=Meta string (most likely a '/') used in the URI
 InsertException.longError.12=Binary blob format error
-InsertException.longError.13=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the request (which will not go away even if you defrag node.db4o), and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in uploads database)".
+InsertException.longError.13=Failed to remove internal state from database. The insert may or may not have succeeded but there is cruft left in the database, which may include data identifying the insert (which will not go away even if you defrag node.db4o), and may cause future problems. This is generally caused by a bug and you should report it. There is probably a related error in the logs - a NullPointerException, IllegalStateException, ArrayIndexOutOfBoundsException etc - or search for "Internal error (cruft left in uploads database)".
 InsertException.longError.1=Caller supplied a URI we cannot use"
 InsertException.longError.2=Internal bucket error: out of disk space/permissions problem?
 InsertException.longError.3=Internal error
