l10n: de: Fix searchPluginNotLoaded: add link to plugins page.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1659,7 +1659,7 @@ WelcomeToadlet.restartingTitle=Der Freenet-Knoten wird neugestartet.
 WelcomeToadlet.searchBoxLabel=Freenet durchsuchen (Kann eine Weile dauern)
 WelcomeToadlet.searchBoxWarningSlow=Die Suche kann momentan langsam sein, deshalb wird für sie ein neues Fenster geöffnet. Sie sollten die unten genannten Index-Seiten betrachten, während sie auf das Ergebnis der Suche warten.
 WelcomeToadlet.searchFreenet=Freenet durchsuchen!
-WelcomeToadlet.searchPluginNotLoaded=Suche-Plugin nicht geladen!
+WelcomeToadlet.searchPluginNotLoaded=Das Suche-Plugin ist nicht geladen. Bitte lade Library auf ${link}der Plugins Seite${/link}.
 WelcomeToadlet.shutdown=Herunterfahren
 WelcomeToadlet.shutdownConfirm=Sind Sie sich sicher, dass Sie Ihren Freenet-Knoten herunterfahren wollen?
 WelcomeToadlet.shutdownConfirmTitle=Knoten herunterfahren
