Add info about java.vm.name to StatisticsToadlet.
Fixes https://bugs.freenetproject.org/view.php?id=4017

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1447,6 +1447,7 @@ StatisticsToadlet.inputRate=Eingehend: ${rate}/Sekunde (von ${max})
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.javaVersion=Java-Version: ${version}
 StatisticsToadlet.jvmInfoTitle=JVM-Info
+StatisticsToadlet.jvmName=JVM-Name: ${name}
 StatisticsToadlet.jvmVendor=JVM-Hersteller: ${vendor}
 StatisticsToadlet.jvmVersion=JVM-Version: ${version}
 StatisticsToadlet.maxMemory=Maximaler Java-Speicher: ${memory}
