--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1563,6 +1563,7 @@ StatisticsToadlet.inputRate=Input Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.jobType=Job Type
 StatisticsToadlet.jvmInfoTitle=JVM Info
+StatisticsToadlet.jvmName=JVM Name: ${name}
 StatisticsToadlet.jvmVendor=JVM Vendor: ${vendor}
 StatisticsToadlet.javaVersion=Java Version: ${version}
 StatisticsToadlet.jvmVersion=JVM Version: ${version}
