Add JVM vendor name to notUsingSunVM message and log.
Add the JVM vendor information to the Node.notUsingSunVM l10n
message and the minor log information.
This is the only difference between OpenJDK and "original" Sun
Java.
See https://bugs.freenetproject.org/view.php?id=4017

Also remove unused var isApple.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -826,7 +826,7 @@ Node.nodeName=Spitzname für diesen Freenet-Knoten
 Node.nodeNameLong=Knoten-Name (Nickname). Dieser wird nur für Ihre Freunde sichtbar sein.
 Node.notEnoughSpaceToAutoDecryptTitle=Zu wenig Speicherplatz, um die Download-Warteschlange zu entschlüsseln!
 Node.notEnoughSpaceToAutoEncryptTitle=Zu wenig Speicherplatz, um die Download-Warteschlange zu verschlüsseln!
-Node.notUsingSunVM=Sie versuchen den Knoten in einer nicht-Sun JVM: ${vendor} ${version} zu betreiben. Dies wird nicht empfohlen: der Knoten könnte nicht gut laufen. Bitte besorgen Sie sich, wenn möglich, Sun java von http://www.java.com/getjava/.
+Node.notUsingSunVM=Sie versuchen den Knoten in einer nicht-Sun JVM: ${vendor} ${version} (${name}) zu betreiben. Dies wird nicht empfohlen: der Knoten könnte nicht gut laufen. Bitte besorgen Sie sich, wenn möglich, Sun java von http://www.java.com/getjava/.
 Node.notUsingSunVMShort=Freenet läuft auf einer nicht-Sun JVM, dies wird nicht empfohlen, bitte besorgen Sie sich das aktuelle Sun Java.
 Node.notUsingSunVMTitle=Es wird keine Sun JVM benutzt
 Node.notUsingWrapper=Sie benutzen den Knoten ohne den Wrapper (Schutz-/Hilfsumgebung). Dies wird nicht empfohlen. Der Knoten wird nicht in der Lage sein, sich neuzustarten, deshalb wird die automatische Aktualisierung nicht funktionieren und wenn die JVM verrückt spielt, wird er auch nicht neugestartet. Der Knoten kann an manchen Stellen auch keine Stack-Dumps (Speicher-Abbilder) erzeugen, die Fehlersuche (Debugging) wird also geringfügig erschwert.
