--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -199,6 +199,8 @@ ConnectivityToadlet.title=Connexion internet de ${nodeName}
 ContentDataFilter.unknownCharset=La page que vous essayez d'afficher utilise un jeu de caractère inconnu. Cela signifie que le noeud ne pourra pas la filtrer, et qu'elle pourait compromettre votre anonymat.
 ContentDataFilter.unknownCharsetTitle=Jeu de caractères inconnu !
 ContentDataFilter.warningUnknownCharsetTitle=Attention : Jeu de caractères inconnu (${charset})
+ContentFilter.EOFDescription=Le filtre a besoin de plus de données du fichier que de données disponibles. Le fichier peut être malformé ou corrompu.
+ContentFilter.EOFMessage=Fin de fichier inattendue
 ContentFilter.applicationPdfReadAdvice=Document Adobe(R) PDF - TRES DANGEREUX !
 ContentFilter.applicationPdfWriteAdvice=Document Adobe(R) PDF - TRES DANGEREUX !
 ContentFilter.imageBMPReadAdvice=Image BMP - probablement pas dangereux
@@ -397,6 +399,8 @@ FProxyToadlet.fetchingPageOptions=Vos options possibles :
 FProxyToadlet.fetchingPageTitle=Téléchargement de la page
 FProxyToadlet.fileInformationTitle=Informations sur le fichier
 FProxyToadlet.filenameLabel=Nom de fichier :
+FProxyToadlet.filterData=Filtrer les données ?
+FProxyToadlet.filterDataMessage=Cocher ceci pour exécuter votre requête à travers le filtre de contenu. Le filtre va essayer de protéger votre ordinateur de tout ce qui peut l'endommager, ou de ce qui peut casser votre anonymat. Il est fortement recommandé de laisser ceci coché.
 FProxyToadlet.friends=Gérer les connexions avec les Amis
 FProxyToadlet.friendsTitle=Connexions aux Amis
 FProxyToadlet.goBack=Retour
@@ -449,8 +453,10 @@ FProxyToadlet.translation=Assistant pour traduire l'interface du neoud dans votr
 FProxyToadlet.translationTitle=Traduction
 FProxyToadlet.unableToRetrieve=Freenet n'est pas parvenu à récupérer ce fichier.
 FProxyToadlet.unknownMIMEType=Type MIME : inconnu
+FProxyToadlet.uploadFileWizard=Insérer un fichier dans Freenet
+FProxyToadlet.uploadFileWizardTitle=Insérer un fichier
 FProxyToadlet.uploads=Fichiers en cours d'insertion vers Freenet
-FProxyToadlet.uploadsTitle=Insertions
+FProxyToadlet.uploadsTitle=Insertions en cours
 FProxyToadlet.welcome=explorer Freenet
 FProxyToadlet.welcomeTitle=Explorer Freenet
 FcpServer.allowedHosts=Machines autorisées (lisez l'avertissement!)
@@ -507,6 +513,10 @@ FetchException.longError.28=Pas assez de données trouvées; des données ont é
 FetchException.longError.29=Type MIME invalide : La clé n'était pas dans la liste de types MIME autorisés par le client
 FetchException.longError.3=Ne sait pas quoi faire avec les méta-données
 FetchException.longError.30=Cette requète a été interrompu car le noeud a récemment reçu une requète pour cette clé et que cette requète avait échoué.
+FetchException.longError.31=Le filtre de contenu n'était pas en mesure de garantir que l'accès au contenu est sans danger
+FetchException.longError.32=Le filtre de contenu n'est pas familier avec le type MIME des données et n'est pas en mesure de les traiter
+FetchException.longError.33=Le filtre de contenu a découvert un type MIME qui'il sait être dangereux, donc il n'est pas en mesure de traiter la demande
+FetchException.longError.34=Les résumés (hash) dans la métadonnée ne correspondent pas à la donnée actuelle. La donnée peut avoir été corrompue durant son téléchargement, ou elle peut avoir été altérée, par exemple, si le noeud inséreur était cassé ou si la donnée a changé sur le disque source à la mi-insertion.
 FetchException.longError.4=L'analyse des méta-données a échoué
 FetchException.longError.5=L'extraction du fichier de l'achive a échoué
 FetchException.longError.6=Le décodage d'un bloc a échoué
@@ -537,12 +547,25 @@ FetchException.shortError.28=Aucune donnée trouvée
 FetchException.shortError.29=Type MIME invalide
 FetchException.shortError.3=Méta-donnée inconnue
 FetchException.shortError.30=Donnée introuvable (échec récent)
+FetchException.shortError.31=La sécurisation du contenu a échoué
+FetchException.shortError.32=Le filtre de contenu a rencoontré un type MIME inconnu
+FetchException.shortError.33=Le filtre de contenu a rencontré un type MIME dangereux
+FetchException.shortError.34=Le contenu ne coïncide pas avec les résumés (hash) dans les métadonnées.
 FetchException.shortError.4=Méta-donnée invalide
 FetchException.shortError.5=Echec de l'archive
 FetchException.shortError.6=Erreur de décodage de bloc
 FetchException.shortError.7=Trop de niveaux de méta-données
 FetchException.shortError.8=Trop de redémarrages
 FetchException.shortError.9=Trop de récursivité
+FileInsertWizardToadlet.insertCanonical=Ceci va toujours produire la même clé pour le même fichier, donc c'est pratique pour le partage de fichier. CEPENDANT, si des personnes mal intentionnées peuvent prédire quels fichiers vous êtes en train d'insérer, ils peuvent être capables d'utiliser ceci pour vous identifier plus facilement !
+FileInsertWizardToadlet.insertCanonicalTitle=Insérer une clé canonique
+FileInsertWizardToadlet.insertIntro=Il y a plusieurs façons différentes pour insérer (envoyer) un fichier dans Freenet selon que vous avez inséré le fichier auparavant ainsi que vos exigences sécuritaires :
+FileInsertWizardToadlet.insertRandom=Ceci est plus sûr qu'avec la première option, mais les clés seront différentes à chaque fois que vous ou quelqu'un d'autre réinsèrerez la clé. Utilisez ceci si vous êtes la source originale de données sensibles.
+FileInsertWizardToadlet.insertRandomTitle=Insérer une clé aléatoire, sûre
+FileInsertWizardToadlet.insertSpecificKey=Si vous connaissez la clé exacte que vous voulez insérer, s'il vous plaît, spécifiez-la ici. Si c'est une SSK, USK ou KSK, toutes les données derrières elles seront chiffrées aléatoirement comme avec l'option 2.
+FileInsertWizardToadlet.insertSpecificKeyTitle=Spécifier la clé
+FileInsertWizardToadlet.pageTitle=Insérer un fichier dans Freenet
+FileInsertWizardToadlet.splitfileCryptoKeyLabel=Clé de chiffrement du fichier fractionné (hexadecimal)
 FileOffer.acceptTransferButton=Accepter le transfert
 FileOffer.askUserTitle=Transfert de fichier direct
 FileOffer.commentLabel=Commentaire :
@@ -650,9 +673,14 @@ GenericReadFilterCallback.protocolNotEscaped=Protocole non supporté: ${protocol
 HTMLFilter.couldNotParseStyle=Style invalide
 HTMLFilter.deletedUnknownStyle=Style inconnu supprimé
 HTMLFilter.failedToParseLabel=Le filtre HTML n'a pas réussi à analyser cette page
+HTMLFilter.invalidMetaType=Type MIME invalide dans la balise meta, format HTML inconnu.
+HTMLFilter.metaOutsideHead=La balise <meta> est en dehors de la balise <head>. Ceci n'est pas permis car c'est invalide et que cela ralentit la détection du jeu de caractères.
+HTMLFilter.multipleCharsetsInMeta=Il y a de multiples balises de jeu de caractères <meta>. Ceci est déroutant, invalide, non sûr et non permis.
+HTMLFilter.textBeforeHTML=Document HTML invalide : il y a du texte avant la balise <html>. Nous ne permettons que les documents HTML valides parce que cela rend plus fiable le filtrage (en évitant en particulier l'ambiguïté du jeu de caractères).
 HTMLFilter.tooManyNestedStyleOrScriptTags=Trop de tags style ou script imbriqués - syntaxe invalide ou ambigüe
 HTMLFilter.tooManyNestedStyleOrScriptTagsLong=Trop de tags </style> imbriqués qui rendraient le filtrage non fiable - ils ont été supprimés - il y aura peut-être des débris dans le navigateur
 HTMLFilter.unknownTag=Tag inconnu ${tag}
+HTMLFilter.wrongCharsetInMeta=Le tag de métadonnées indique un mauvais jeu de caractères.
 IPDetectorPluginManager.connectionProblems=Problèmes de connexion :
 IPDetectorPluginManager.direct=Il semble que vous soyez connecté directement à internet. Félicitations, vous devriez pouvoir vous connecter à n'importe quel autre noeud Freenet.
 IPDetectorPluginManager.directTitle=Connexion directe à internet détectée
@@ -764,6 +792,8 @@ LogConfigHandler.dirName=Dossier des journaux
 LogConfigHandler.dirNameLong=Dossier où placer les fichiers journaux
 LogConfigHandler.enabled=Activer la journalisation ?
 LogConfigHandler.enabledLong=Mettez faux pour désactiver complètement la journalisation
+LogConfigHandler.maxBacklogNotBusy=Durée maximale entre l'écriture des logs (en millisecondes)
+LogConfigHandler.maxBacklogNotBusyLong=Durée maximale pendant laquelle le noeud va conserver les données en RAM s'il n'est pas en train de les écrire sur le disque. Une valeur haute signifie moins d'accès disque et une meilleure performance système, mais si vous déboguez, vous verrez le résultat plus tardivement.
 LogConfigHandler.maxCachedBytes=Espace mémoire (RAM) maximum des journaux
 LogConfigHandler.maxCachedBytesLong=Espace mémoire alloué aux journaux
 LogConfigHandler.maxCachedLines=Nombre de lignes de journaux en mémoire (RAM)
@@ -1205,6 +1235,8 @@ QueueToadlet.backToUploadsPage=Retourner à la page des insertions
 QueueToadlet.bulkDownloadSelectOptionDirect=dans l'espace temporaire
 QueueToadlet.bulkDownloadSelectOptionDisk=sur le disque
 QueueToadlet.change=Changer
+QueueToadlet.compatModeLabel=Mode de compatibilité
+QueueToadlet.compatibilityMode=Mode de compatibilité
 QueueToadlet.completedDU=Insertions de dossiers terminées (${size})
 QueueToadlet.completedDinDownloadDirectory=Téléchargements vers le dossier "downloads" terminés (${size})
 QueueToadlet.completedDinTempDirectory=Téléchargements vers l'espace temporaire terminés (${size})
@@ -1256,6 +1288,8 @@ QueueToadlet.failedU=Insertions échouées (${size})
 QueueToadlet.fcpIsMissing=Serveur FCP manquant
 QueueToadlet.fileName=Nom du fichier
 QueueToadlet.files=Fichiers
+QueueToadlet.filterData=Filtre :
+QueueToadlet.filterDataMessage=Sélectionner ceci pour exécuter votre requête à travers le filtre de contenu. Le filtre va essayer de protéger votre ordinateur de tout ce qui peut l'endommager, ou de ce qui peut casser votre anonymat. Il est fortement recommandé de laisser ceci activé.
 QueueToadlet.follow=Suivre les redirections
 QueueToadlet.globalQueueIsEmpty=Il n'y a pas de téléchargements/insertions en attente dans la file globale.
 QueueToadlet.identifier=Identifiant
@@ -1275,6 +1309,7 @@ QueueToadlet.noTaskOnGlobalQueue=Il n'y a aucune tâche en attente dans la file 
 QueueToadlet.none=néant
 QueueToadlet.notLoadedYet=Le nœud est encore en train de charger la liste des requêtes persistantes. Veuillez patienter.
 QueueToadlet.notLoadedYetTitle=File d'attente non chargée
+QueueToadlet.overriddenCryptoKeyInCompatCell=Clé de chiffrement aléatoire
 QueueToadlet.panicButton=Bouton Panique
 QueueToadlet.panicButtonConfirmation=Tout supprimer sans confirmation !
 QueueToadlet.panicButtonNoConfirmation=Cliquez pour supprimer tous les téléchargements/insertions et nettoyer toutes les données incriminantes sans aucune confirmation !
@@ -1427,6 +1462,12 @@ SecurityLevels.friendsThreatLevel.desc.NORMAL=Freenet partagera une quantité li
 SecurityLevels.friendsThreatLevel.name.HIGH=HAUT
 SecurityLevels.friendsThreatLevel.name.LOW=BAS
 SecurityLevels.friendsThreatLevel.name.NORMAL=NORMAL
+SecurityLevels.networkThreatLevel.darknetExplain=Je connais au moins 3 personnes (plus de 10 pour de bonnes performances) qui utilisent déjà Freenet : se connecter uniquement à des amis.
+SecurityLevels.networkThreatLevel.darknetLabel=Mode darknet (connexion aux amis seulement)
+SecurityLevels.networkThreatLevel.opennetExplain=Je ne connais personne qui utilise déjà Freenet : se connecter aux autres noeuds Freenet automatiquement.
+SecurityLevels.networkThreatLevel.opennetFriendsWarning=Ajouter comme amis des gens que vous ne connaissez pas en dehors de Freenet n'améliorera pas votre sécurité et réduira les performances !
+SecurityLevels.networkThreatLevel.opennetIntro=Connaissez-vous personnellement quelqu'un qui utilise déjà Freenet ? Si vous connaissez au moins 3 personnes qui utilisent déjà Freenet, vous pouvez activer le mode darknet, Freenet ne se connectera alors qu'à vos amis, augmentant fortement la sécurité. Toutefois, si vous ne connaissez personne déjà sur Freenet, ou si vous voulez une performance maximale, vous devriez activer le mode opennet, Freenet se connectera alors automatiquement aux autres noeuds Freenet hébergés par des inconnus.
+SecurityLevels.networkThreatLevel.opennetLabel=Mode opennet (connexion aux amis et aux inconnus)
 SecurityLevels.networkThreatLevel.choice.HIGH=Je veux rendre très difficile la surveillance de mes communications, ou je m'inquiète que les fournisseurs d'accès internet essaient de bloquer Freenet.
 SecurityLevels.networkThreatLevel.choice.LOW=Je me fiche d'être surveillé et je veux des performances maximales.
 SecurityLevels.networkThreatLevel.choice.MAXIMUM=Je compte accéder à des informations qui pourraient me faire arrêter, emprisonner, ou pire. Je comprends que Freenet est expérimental et ne peut pas garantir la sécurité contre certaines attaques, mais j'accepte ce risque comparé aux alternatives.
